refactor: changed reward domain to ease frontend needs
